--- a/client/src/ViewOne.css
+++ b/client/src/ViewOne.css
@@ -8,6 +8,13 @@
     width: 400px;
     margin-left: 155px;
     margin-top: 100px;
-    text-align: center; /* Center the text horizontally */
+    text-align: center; 
+    display: flex;
 }
 
+.one-adjust {
+    display: flex;
+    width: 300px;
+    height: 100px;
+    border: 1px solid white;
+}
