Buttons adjusted on add snack, moving while validations were up. Update and Delete buttons were unaligned left side of update form, adjusted as well

--- a/client/src/UpdateSnack.css
+++ b/client/src/UpdateSnack.css
@@ -35,7 +35,9 @@ input[type="number"] {
 
 }
 
-.submit-button{
+.update-button{
+    margin-left: 37px;
+    margin-top: 15px;
     width: 100px;
     height: 40px;
     background-color: #007bff;
