--- a/client/src/SnackForm.css
+++ b/client/src/SnackForm.css
@@ -12,12 +12,15 @@
     justify-content: center ;
     width: 100%;
     height: 100vh;
+
 }
 
 
 .form-field {
+    width: 300px;
     margin-bottom: 1rem;
     text-align: center;
+
 }
 
 label {
@@ -32,6 +35,7 @@ input[type="number"] {
 }
 
 .submit-button {
+    margin-top: 50px;
     width: 100px;
     height: 40px;
     background-color: #007bff;
@@ -42,7 +46,6 @@ input[type="number"] {
     font-family: 'Arial';
     font-size: small;
     text-align: center;
-    margin-left: 60px;
 }
 
 .error-message {
