--- a/client/src/VendorStyle.css
+++ b/client/src/VendorStyle.css
@@ -41,7 +41,7 @@ button {
     width: 200px;
     height: 100px;
     padding: 10px;
-    border: none;
+    border: 3px solid white;
     border-radius: 5px;
     background-color: #161515;
     color: #fff;
@@ -71,6 +71,6 @@ button:active {
 }
 
 .add-snack-css a:hover {
-    color: #0056b3;
+    color: #000000;
 }
 
