--- a/client/src/VendorStyle.css
+++ b/client/src/VendorStyle.css
@@ -2,11 +2,19 @@
     display: flex;
     justify-content: center;
     height: 900px;
-    width: 1900px;
+    width: 100%;
+    background-image: url('../public/images/TEST.png');
+    background-blend-mode: darken;
+    background-repeat: none;
+    background-position: center;
+
 }
 
+
+
 .vending-machine {
-    margin-right: 100px;
+    margin-right: 80px;
+    margin-left: 40px;
     width: 900px;
     text-align: center;
     display: flex;
@@ -14,6 +22,7 @@
     justify-content: left;
     align-items: center;
 }
+
 
 button {
     border-radius: 8px;
@@ -62,15 +71,20 @@ button:active {
 
 .add-snack-css {
     margin-top: 20px;
+    font-family: arial;
+    background-color: #161515;
+    width: 260px;
+    height: 23px;
+    border: 2px solid white;
+    border-radius: 5px;
 }
 
 .add-snack-css a {
-    color: #007bff;
+    color: #ffffff;
     text-decoration: none;
     font-size: 16px;
 }
 
 .add-snack-css a:hover {
-    color: #000000;
+    color: #0056b3;
 }
-
