--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: #ffffff;
+  text-decoration: underline;
 }
 a:hover {
-  color: #535bf2;
+  color: #cf3a26;
 }
 
 
